# DiscordPyCAH

./: LICENSE  README.md  fuck you discord.txt  index.md  keep_alive.py  main.py  prefixes.json  pyproject.toml  rickroll_detector.py  to do.txt
cogs/: cah.py  events.py  meme.py  mod.py  reddit.py  troll.py  utility.py
json/: editsnipe-dict.json  prefixes.json  snipe-dict.json
