[tool.poetry]
name = "discordpycah"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2021.2.22"
flask = "^1.1.2"
praw = "^7.2.0"
asyncpraw = "^7.2.0"
jishaku = "^1.20.0"
pymongo = "^3.11.3"
discord-ext-slash = "^0.4.0"
ratelimit = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
